manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: challenge
  name: challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: challenge
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: challenge
    spec:
      containers:
      - image: deividdua32/challenge:v1
        name: challenge
        resources: {}
status: {}
