manifests/simpleapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: challenge
  name: challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: challenge
  template:
    metadata:
      labels:
        app: challenge
    spec:
      containers:
      - image: deividdua32/challenge:latest
        name: challenge
