manifests/simpleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.prova
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: challenge
              port:
                number: 80
